--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+US+Trad:wght@100..400&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DhirajJsx🚀</title>
+    <title>Ojasvi Bakshi🚀</title>
   </head>
   <body class="">
     <div id="root"></div>
